# ros2-dockergen

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  README_CI.md  docker-compose.yml  index.html  install.sh  launch_tb3_nav2.sh  package.json  pyproject.toml  ros2-docker-generator.html  setup.cfg
.github/workflows/: _test-base.yml  _test-build-tools.yml  _test-gui.yml  _test-nvidia.yml  _test-user-setup.yml  ci.yml  publish.yml
CI/: generate.js  validate.sh
JETSON_TESTING/: jetson_tester_instructions.md
ci/: core.js  generate.js  validate.sh
reference-container/: docker-compose.yml  entrypoint.sh
reference-container/.devcontainer/: devcontainer.json
ros2-docker-gen/: README.md  install.sh  package.json  setup.cfg
ros2-docker-gen/CI/: generate.js
ros2-docker-gen/data/: config.json
ros2-docker-gen/src/: core.js
ros2-docker-gen/tests/: _runner.cjs  test_parity.py
ros2-docker-generator/: README.md  core.js  generate.js
scripts/: install_hooks.sh  run_act.sh
src/: core.js  core.py  web_bundle.js
src/ros2_dockergen/: cli.py  core.py
src/ros2_dockergen/data/: config.json
tests/: _runner.js  run_tests.sh  sync_version.py  test_builds.sh  test_output_shape.py  test_parity.py  test_version.py  test_web_bundle.py  web_bundle_runner.mjs
