[metadata]
name            = ros2-dockergen
version         = 1.0.0
description     = Interactive CLI wizard that generates Dockerfiles and docker-compose files for ROS2 projects
long_description = file: README.md
long_description_content_type = text/markdown
license         = MIT
keywords        = ros2, docker, robotics, cli, generator
python_requires = >=3.10

[options]
package_dir = =src
packages    =
data_files  =
    data/ = data/config.json

[options.package_data]
* = *.json

[options.scripts]
scripts = bin/ros2-dockergen
